# IHateItButINeedToLearnCMake

./: .gitignore  .gitmodules  clean.bat  clean.sh  tb.bat  tb.sh
P01/: CMakeLists.txt
P03/: CMakeLists.txt
P04/: CMakeLists.txt  main.cpp
P05/: CMakeLists.txt
P05/Adder/: CMakeLists.txt
P06/: CMakeLists.txt  main.cpp
P06/Adder/: CMakeLists.txt
P07/: CMakeLists.txt  main.cpp
P07/Adder/: adder.hpp
P08/: CMakeLists.txt  main.cpp  windowTestConfigure.h.in
P08/Adder/: adder.cpp
scripts/: build.bat  build.sh  clean.sh  config.bat  config.sh  run.bat  run.sh
